@@ -6,6 +6,8 @@ Changes for 1.3.6
       Get MD3_PATH from skins as well as model header
       Allow separate MD3_PATH for each skin
    Corrected capitalization for "Normals Face Out" command
+   Split keyboard shortcut for flip front/back (backslash) view
+      and flip ortho/persp (backtick)
    Replaced lex/yacc code with custom preferences parser
       lex/yacc parser was having parse failures on some archs
    Updated configuration for newer autoconf (2.61) and automake (1.9)
